CHANGELOG
=========
v1.0.00
-------
Fixed edit bug preventing grouping from being saved

v0.9.00
-------
Added unit completion, evidence submission, teacher view of enrolment

v0.8.00
-------
Added student enrolment (individual and group)

v0.7.00
-------
Minimum year group for viewing and working arrangement field

v0.6.00
-------
More stylish browsing, with unit thumbnails

v0.5.00
-------
Install error fix

v0.4.00
-------
Full screen browsing

v0.3.00
-------
Finished unit browsing
Unit enrolment
Unit completion

v0.2.00
-------
Minor bug fixes and enhancements
Unit browsing

v0.1.00
-------
Added settings page
Added unit management