@@ -1,0 +1,204 @@
+<?php
+/*
+Gibbon, Flexible & Open School System
+Copyright (C) 2010, Ross Parker
+
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program. If not, see <http://www.gnu.org/licenses/>.
+*/
+
+@session_start() ;
+
+//Module includes
+include "./modules/" . $_SESSION[$guid]["module"] . "/moduleFunctions.php" ;
+
+if (isActionAccessible($guid, $connection2, "/modules/Free Learning/units_browse_details.php")==FALSE) {
+	//Acess denied
+	print "<div class='error'>" ;
+		print _("You do not have access to this action.") ;
+	print "</div>" ;
+}
+else {
+	$highestAction=getHighestGroupedAction($guid, "/modules/Free Learning/units_browse_details.php", $connection2) ;
+	if ($highestAction==FALSE) {
+		print "<div class='error'>" ;
+		print _("The highest grouped action cannot be determined.") ;
+		print "</div>" ;
+	}
+	else {
+		//Get action with highest precendence
+		print "<div class='trail'>" ;
+		print "<div class='trailHead'><a href='" . $_SESSION[$guid]["absoluteURL"] . "'>" . _("Home") . "</a> > <a href='" . $_SESSION[$guid]["absoluteURL"] . "/index.php?q=/modules/" . getModuleName($_GET["q"]) . "/" . getModuleEntry($_GET["q"], $connection2, $guid) . "'>" . _(getModuleName($_GET["q"])) . "</a> > <a href='" . $_SESSION[$guid]["absoluteURL"] . "/index.php?q=/modules/Free Learning/units_browse_details.php&sidebar=true&freeLearningUnitID=" . $_GET["freeLearningUnitID"] . "'>" . _('Browse Units') . "</a> > </div><div class='trailEnd'>" . _('Add Multiple') . "</div>" ;
+		print "</div>" ;
+
+		$freeLearningUnitID="" ;
+		if (isset($_GET["freeLearningUnitID"])) {
+			$freeLearningUnitID=$_GET["freeLearningUnitID"] ;
+		}
+
+		if ($freeLearningUnitID=="") {
+			print "<div class='error'>" ;
+				print _("You have not specified one or more required parameters.") ;
+			print "</div>" ;
+		}
+		else {
+			try {
+				if ($highestAction=="Browse Units_all") {
+					$data=array("freeLearningUnitID"=>$freeLearningUnitID); 
+					$sql="SELECT * FROM freeLearningUnit WHERE freeLearningUnitID=:freeLearningUnitID" ; 
+				}
+				else if ($highestAction=="Browse Units_prerequisites") {
+					$data["freeLearningUnitID"]=$freeLearningUnitID; 
+					$data["gibbonPersonID"]=$_SESSION[$guid]["gibbonPersonID"] ;
+					$data["gibbonSchoolYearID"]=$_SESSION[$guid]["gibbonSchoolYearID"] ;
+					$sql="SELECT freeLearningUnit.*, gibbonYearGroup.sequenceNumber AS sn1, gibbonYearGroup2.sequenceNumber AS sn2 FROM freeLearningUnit LEFT JOIN gibbonYearGroup ON (freeLearningUnit.gibbonYearGroupIDMinimum=gibbonYearGroup.gibbonYearGroupID) JOIN gibbonStudentEnrolment ON (gibbonPersonID=:gibbonPersonID AND gibbonSchoolYearID=:gibbonSchoolYearID) JOIN gibbonYearGroup AS gibbonYearGroup2 ON (gibbonStudentEnrolment.gibbonYearGroupID=gibbonYearGroup2.gibbonYearGroupID) WHERE active='Y' AND (gibbonYearGroup.sequenceNumber IS NULL OR gibbonYearGroup.sequenceNumber<=gibbonYearGroup2.sequenceNumber) AND freeLearningUnitID=:freeLearningUnitID ORDER BY name DESC" ; 
+				}
+				$result=$connection2->prepare($sql);
+				$result->execute($data);
+			}
+			catch(PDOException $e) { 
+				print "<div class='error'>" . $e->getMessage() . "</div>" ; 
+			}
+
+			if ($result->rowCount()!=1) {
+				print "<div class='error'>" ;
+					print _("The selected record does not exist, or you do not have access to it.") ;
+				print "</div>" ;
+			}
+			else {
+				$row=$result->fetch() ;
+
+				if (isset($_GET["addReturn"])) { $addReturn=$_GET["addReturn"] ; } else { $addReturn="" ; }
+				$addReturnMessage="" ;
+				$class="error" ;
+				if (!($addReturn=="")) {
+					if ($addReturn=="fail0") {
+						$addReturnMessage=_("Your request failed because you do not have access to this action.") ;	
+					}
+					else if ($addReturn=="fail2") {
+						$addReturnMessage=_("Your request failed due to a database error.") ;	
+					}
+					else if ($addReturn=="fail3") {
+						$addReturnMessage=_("Your request failed because your inputs were invalid.") ;	
+					}
+					else if ($addReturn=="fail4") {
+						$addReturnMessage=_("Your request failed because your inputs were invalid.") ;	
+					}
+					else if ($addReturn=="fail5") {
+						$addReturnMessage=_("Your request was successful, but some data was not properly saved.") ;	
+					}
+					else if ($addReturn=="success0") {
+						$addReturnMessage=_("Your request was completed successfully. You can now add another record if you wish.") ;	
+						$class="success" ;
+					}
+					print "<div class='$class'>" ;
+						print $addReturnMessage;
+					print "</div>" ;
+				} 
+				?>
+
+				<form method="post" action="<?php print $_SESSION[$guid]["absoluteURL"] . "/modules/" . $_SESSION[$guid]["module"] . "/units_browse_details_enrolMultipleProcess.php?freeLearningUnitID=" . $_GET["freeLearningUnitID"] ?>">
+					<table class='smallIntBorder' cellspacing='0' style="width: 100%">	
+						<tr>
+							<td> 
+								<b><?php print _('Unit') ?> *</b><br/>
+								<span style="font-size: 90%"><i><?php print _('This value cannot be changed.') ?></i></span>
+							</td>
+							<td class="right">
+								<input readonly style='width: 300px' type='text' value='<?php print $row["name"] ?>' />
+							</td>
+						</tr>
+						
+						<tr>
+							<td style='width: 275px'> 
+								<b><?php print _('Class') ?></b><br/>
+							</td>
+							<td class="right">
+								<?php
+									$highestAction2=getHighestGroupedAction($guid, "/modules/Free Learning/units_manage.php", $connection2) ;
+								?>
+								<select name="gibbonCourseClassID" id="gibbonCourseClassID" style="width: 302px">
+									<?php
+									try {
+										if ($highestAction2=="Manage Units_all") {
+											$dataSelect=array("gibbonSchoolYearID"=>$_SESSION[$guid]["gibbonSchoolYearID"]); 
+											$sqlSelect="SELECT gibbonCourseClassID, gibbonCourse.name, gibbonCourse.nameShort AS course, gibbonCourseClass.nameShort AS class FROM gibbonCourse JOIN gibbonCourseClass ON (gibbonCourse.gibbonCourseID=gibbonCourseClass.gibbonCourseID) WHERE gibbonSchoolYearID=:gibbonSchoolYearID ORDER BY course, class" ;
+										}
+										else {
+											$dataSelect=array("gibbonSchoolYearID"=>$_SESSION[$guid]["gibbonSchoolYearID"], "gibbonPersonID"=>$_SESSION[$guid]["gibbonPersonID"]); 
+											$sqlSelect="SELECT gibbonCourseClass.gibbonCourseClassID, gibbonCourse.name, gibbonCourse.nameShort AS course, gibbonCourseClass.nameShort AS class FROM gibbonCourse JOIN gibbonCourseClass ON (gibbonCourse.gibbonCourseID=gibbonCourseClass.gibbonCourseID) JOIN gibbonCourseClassPerson ON (gibbonCourseClassPerson.gibbonCourseClassID=gibbonCourseClass.gibbonCourseClassID) WHERE role='Teacher' AND gibbonSchoolYearID=:gibbonSchoolYearID AND gibbonPersonID=:gibbonPersonID ORDER BY course, class" ;
+										}
+										$resultSelect=$connection2->prepare($sqlSelect);
+										$resultSelect->execute($dataSelect);
+									}
+									catch(PDOException $e) { }
+									while ($rowSelect=$resultSelect->fetch()) {
+										print "<option value='" . $rowSelect["gibbonCourseClassID"] . "'>" . htmlPrep($rowSelect["course"]) . "." . htmlPrep($rowSelect["class"]) . " - " . $rowSelect["name"] . "</option>" ;
+									}
+									?>
+								</select>
+							</td>
+						</tr>
+						<tr>
+							<td style='width: 275px'> 
+								<b><?php print _('Students In Class') ?> *</b><br/>
+								<span style="font-size: 90%"><i><?php print _('Use Control, Command and/or Shift to select multiple.') ?> </span>
+							</td>
+							<td class="right">
+								<select multiple name="gibbonPersonIDMulti[]" id="gibbonPersonIDMulti" style="width: 302px; height:150px">
+									<?php
+									try {
+										$dataSelect2=array("gibbonSchoolYearID"=>$_SESSION[$guid]["gibbonSchoolYearID"]); 
+										$sqlSelect2="SELECT gibbonPerson.gibbonPersonID, preferredName, surname, gibbonRollGroup.name AS name, gibbonCourseClassID FROM gibbonPerson JOIN gibbonStudentEnrolment ON (gibbonPerson.gibbonPersonID=gibbonStudentEnrolment.gibbonPersonID) JOIN gibbonRollGroup ON (gibbonStudentEnrolment.gibbonRollGroupID=gibbonRollGroup.gibbonRollGroupID) JOIN gibbonCourseClassPerson ON (gibbonCourseClassPerson.gibbonPersonID=gibbonPerson.gibbonPersonID) WHERE role='Student' AND status='FULL' AND (dateStart IS NULL OR dateStart<='" . date("Y-m-d") . "') AND (dateEnd IS NULL  OR dateEnd>='" . date("Y-m-d") . "') AND gibbonRollGroup.gibbonSchoolYearID=:gibbonSchoolYearID ORDER BY name, surname, preferredName" ;
+										$resultSelect2=$connection2->prepare($sqlSelect2);
+										$resultSelect2->execute($dataSelect2);
+									}
+									catch(PDOException $e) { }
+									while ($rowSelect2=$resultSelect2->fetch()) {
+										print "<option class='" . $rowSelect2["gibbonCourseClassID"] . "' value='" . $rowSelect2["gibbonPersonID"] . "'>" . htmlPrep($rowSelect2["name"]) . " - " . formatName("", htmlPrep($rowSelect2["preferredName"]), htmlPrep($rowSelect2["surname"]), "Student", true) . "</option>" ;
+									}
+									?>
+								</select>
+							</td>
+						</tr>
+						<script type="text/javascript">
+							$("#gibbonPersonIDMulti").chainedTo("#gibbonCourseClassID");
+						</script>
+						<tr>
+							<td> 
+								<b><?php print _('Status') ?> *</b><br/>
+								<span style="font-size: 90%"><i></i></span>
+							</td>
+							<td class="right">
+								<select name="status" id="status" style="width: 302px">
+									<option value="Exempt"><?php print _('Exempt') ?></option>
+								</select>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<span style="font-size: 90%"><i>* <?php print _("denotes a required field") ; ?></i></span>
+							</td>
+							<td class="right">
+								<input type="hidden" name="address" value="<?php print $_SESSION[$guid]["address"] ?>">
+								<input type="submit" value="<?php print _('Next') ?>">
+							</td>
+						</tr>
+					</table>
+				</form>
+				<?php
+			}
+		}
+	}
+}
+?>
